--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,23 +1,15 @@
 [tool.poetry]
-name = "python-template"
+name = "basic-python-stress-test"
 version = "0.1.0"
 description = ""
-authors = ["Your Name <you@example.com>"]
+authors = ["Kokonico <kokonico@duck.com>"]
+readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.10.0,<3.11"
-faker = "22.7.0"
+python = "^3.12"
+Faker = "^23.0.0"
 
-[tool.pyright]
-# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
-useLibraryCodeForTypes = true
-exclude = [".cache"]
-
-[tool.ruff]
-# https://beta.ruff.rs/docs/configuration/
-select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
-ignore = ['W291', 'W292', 'W293']
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
